Issue 25: Fixed a bug in which a header link wrapped when hovered over.

--- a/themes/portfolio/portfolio.scss
+++ b/themes/portfolio/portfolio.scss
@@ -60,7 +60,7 @@ $hero-height: 100vh;
   height: 100%;
   padding: 10px 0;
   text-align: center;
-  width: 125px;
+  width: 130px;
 
   &:first-of-type, &:last-of-type {
     text-align: left;
